--- a/comida/templates/home.html
+++ b/comida/templates/home.html
@@ -16,8 +16,9 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae vel fugit obcaecati facere tenetur earum quaerat voluptate saepe soluta itaque ex optio ipsam doloremque sunt, error, dicta molestiae repellendus quibusdam?</p>
             </div>
             <div class="botones">
-                <button class="boton"><a href="{% url 'login' %}">Iniciar Sesion</a></button>
-                <button class="boton"><a href="">Registrarse</a></button>
+                <button class="boton" onclick="location.href='ses.html'">Iniciar Sesión</button>
+                
+                <button class="boton" onclick="location.href='regis.html'"><a >Registrarse</a></button>
             </div>
         </div>
         <div class="imagen" data-aos="fade-left" data-aos-duration="1750">
