--- a/comida/templates/home.html
+++ b/comida/templates/home.html
@@ -16,9 +16,9 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae vel fugit obcaecati facere tenetur earum quaerat voluptate saepe soluta itaque ex optio ipsam doloremque sunt, error, dicta molestiae repellendus quibusdam?</p>
             </div>
             <div class="botones">
-                <button class="boton" onclick="location.href='{% url 'iniciar' %}'">Iniciar Sesión</button>
+                <button class="boton" onclick=location.href="{% url 'iniciar' %}">Iniciar Sesión</button>
 
-                <button class="boton" onclick="location.href='{% url 'regis' %}'">Registrarse</button>
+                <button class="boton" onclick=location.href="{% url 'regis' %}">Registrarse</button>
             </div>
         </div>
         <div class="imagen" data-aos="fade-left" data-aos-duration="1750">
