--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -8,18 +8,15 @@
 <link rel="stylesheet" href="{% static 'login.css' %}">
 
 <div class="container">
-    <h2>Registrarse</h2>
-    <form action="/register" method="post">
+    <h2>Iniciar Sesión</h2>
+    <form action="/iniciar" method="post">
         <label for="username">Usuario:</label>
         <input type="text" id="username" name="username" required>
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
         <label for="password">Contraseña:</label>
         <input type="password" id="password" name="password" required>
-        <input type="submit" value="Registrarse">
-        <p>Para unirte a nuestra comunidad por favor Inicia Sesión con tus datos</p>
-            <input type="button" value="Registrarse" id="sign-up" onclick="window.location.href='ses.html'">
-    </form>
-</div>
+        <input type="submit" value="Iniciar Sesión">
+        <br>
+        <p>Si no cuenta con una cuenta por favor registese</p>
+            <input type="button" value="Registrarse" id="sign-in" onclick="window.location.href='regis.html'">
 
 {% endblock %}
