--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="{% static 'login.css' %}">
 
 <main class="main">
-    <div class="container">
+    <div class="iniciar-container">
         <h2>Iniciar Sesión</h2>
         <form action="/iniciar" method="post">
             <label for="username">Usuario:</label>
