--- a/comida/static/login.css
+++ b/comida/static/login.css
@@ -1,25 +1,41 @@
 @import url('/static/barra.css ');
 
-.iniciar-container {
-    margin-top: 80px; 
+.main {
+    min-height: 78vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding: 10px;
+}
+
+.login-cont {
     background-color: var(--dorado);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px var(--text_sha);
     width: 300px;
+    max-width: 90%;
+    margin: 10px auto;
 }
+
 label {
     display: block;
     margin-bottom: 8px;
     color: var(--negro-profundo);
 }
-input[type="text"], input[type="password"] {
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
     width: 100%;
     padding: 8px;
     margin-bottom: 12px;
     border: 1px solid var(--gris-acero);
     border-radius: 4px;
 }
+
 input[type="submit"] {
     width: 100%;
     padding: 10px;
@@ -29,6 +45,7 @@ input[type="submit"] {
     border-radius: 4px;
     cursor: pointer;
 }
+
 input[type="submit"]:hover {
     background-color: #B89E2A;
 }
@@ -37,27 +54,18 @@ h2 {
     color: var(--negro-profundo);
     text-align: center;
 }
-label {
-    display: block;
-    margin-bottom: 8px;
-    color: var(--negro-profundo);
-}
-input[type="text"], input[type="email"], input[type="password"] {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 12px;
-    border: 1px solid var(--gris-acero);
-    border-radius: 4px;
-}
-input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background-color: var(--dorado);
-    color: var(--blanco);
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-input[type="submit"]:hover {
-    background-color: #B89E2A;
+
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+    
+    .main {
+        top: 70px;
+    }
+    .login-cont {
+        padding: 15px;
+        width: 80%;
+        max-width: 50%;
+    }
+
+
 }
