--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -1,26 +1,32 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} inicio {% endblock %}
+{% block title %} inicio sesión {% endblock %}
 
 {% block content %}
 
 
 <link rel="stylesheet" href="{% static 'login.css' %}">
 
-<main class="main">
-    <div class="iniciar-container">
+<div class="main">
+    <div class="login-cont">
         <h2>Iniciar Sesión</h2>
         <form action="/iniciar" method="post">
             <label for="username">Usuario:</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" placeholder="Ingrese su usuario" id="username" name="username" required>
             <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" placeholder="Ingrese su contraseña" id="password" name="password" required>
             <input type="submit" value="Iniciar Sesión">
             <br>
-            <p>Si no cuenta con una cuenta por favor registese</p>
-                <input type="button" value="Registrarse" id="sign-in" onclick=location.href="{% url 'regis' %}">
+            <p>Si no cuenta con una cuenta por favor regístrese</p>
+            <input type="button" value="Registrarse" id="sign-in" onclick=location.href="{% url 'regis' %}">
         </form>
+
+{% if messages %}
+    {% for message in messages %}
+        <div class="message">{{ message }}</div>
+    {% endfor %}
+{% endif %}
     </div>
-</main>
+</div>
 
 {% endblock %}
