--- a/comida/templates/regis.html
+++ b/comida/templates/regis.html
@@ -7,20 +7,21 @@
 
 <link rel="stylesheet" href="{% static 'login.css' %}">
 
-
-<div class="container">
-    <h2>Registrarse</h2>
-    <form action="/regis" method="post">
-        <label for="username">Usuario:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
-        <input type="submit" value="Registrarse">
-        <p>Para unirte a nuestra comunidad por favor Inicia Sesión con tus datos</p>
-            <input type="button" value="Registrarse" id="sign-up" onclick=location.href="{% url 'iniciar' %}">
-    </form>
+<div class="main">
+    <div class="login-cont">
+        <h2>Registrarse</h2>
+        <form action="/regis" method="post">
+            <label for="username">Usuario:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" required>
+            <input type="submit" value="Registrarse">
+            <p>Para unirte a nuestra comunidad por favor Inicia Sesión con tus datos</p>
+                <input type="button" value="Registrarse" id="sign-up" onclick=location.href="{% url 'iniciar' %}">
+        </form>
+    </div>
 </div>
 
 {% endblock %}
