--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -19,15 +19,11 @@
             <input type="submit" value="Iniciar Sesión">
             <br>
             <p>Si no cuenta con una cuenta por favor regístrese</p>
-            <input type="button" value="Registrarse" id="sign-in" onclick=location.href="{% url 'regis' %}">
+            <input type="button" value="entrar" onclick="loguear()">
         </form>
 
-{% if messages %}
-    {% for message in messages %}
-        <div class="message">{{ message }}</div>
-    {% endfor %}
-{% endif %}
     </div>
 </div>
+<script src="{% static 'js/scripts.js' %}"></script>
 
 {% endblock %}
