--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -13,13 +13,13 @@
         <form action="/iniciar" method="post">
             {% csrf_token %}
             <label for="username">Usuario:</label>
-            <input type="text" placeholder="Ingrese su usuario" id="username" name="username" required>
+            <input type="text" placeholder="Ingrese su usuario" id="usuario" name="usuario" required>
             <label for="password">Contraseña:</label>
-            <input type="password" placeholder="Ingrese su contraseña" id="password" name="password" required>
-            <input type="submit" value="Iniciar Sesión">
+            <input type="password" placeholder="Ingrese su contraseña" id="clave" name="clave" required>
+            <input type="button" value="Iniciar Sesión" onclick="loguear()">
             <br>
             <p>Si no cuenta con una cuenta por favor regístrese</p>
-            <input type="button" value="entrar" onclick="loguear()">
+            <input type="button" value="Registrarse" id="sign-up" onclick=location.href="{% url 'regis' %}">
         </form>
 
     </div>
