--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -15,15 +15,46 @@
             <label for="username">Usuario:</label>
             <input type="text" placeholder="Ingrese su usuario" id="usuario" name="usuario" required>
             <label for="password">Contraseña:</label>
-            <input type="password" placeholder="Ingrese su contraseña" id="clave" name="clave" required>
-            <input type="button" value="Iniciar Sesión" onclick="loguear()">
-            <br>
-            <p>Si no cuenta con una cuenta por favor regístrese</p>
-            <input type="button" value="Registrarse" id="sign-up" onclick=location.href="{% url 'regis' %}">
+            <div class="password-container">
+                <input type="password" id="clave" name="clave" required>
+                <i id="togglePassword" class="fa fa-eye" onclick="togglePassword()"></i>
+            </div>
+            <input type="submit" value="Iniciar Sesión">
+            {% if error %}
+                <p class="error">{{ error }}</p>
+            {% endif %}
         </form>
-
+        <p>¿No tienes cuenta? <a href="{% url 'regis' %}">Regístrate aquí</a></p>
     </div>
 </div>
-<script src="{% static 'js/scripts.js' %}"></script>
+{% if error %}
+    <script type="text/javascript">
+        alert("{{ error }}");  // Muestra el mensaje de error en un alert() de JavaScript
+    </script>
+{% endif %}
+
+<script type="text/javascript">
+    function togglePassword() {
+        var passwordField = document.getElementById('clave');
+        var passwordType = passwordField.type;
+        var toggleIcon = document.getElementById('togglePassword');
+
+        // Cambiar entre 'password' y 'text'
+        if (passwordType === 'password') {
+            passwordField.type = 'text';  // Mostrar la contraseña
+            toggleIcon.classList.remove('fa-eye');
+            toggleIcon.classList.add('fa-eye-slash');  // Cambiar ícono
+        } else {
+            passwordField.type = 'password';  // Ocultar la contraseña
+            toggleIcon.classList.remove('fa-eye-slash');
+            toggleIcon.classList.add('fa-eye');  // Cambiar ícono
+        }
+    }
+</script>
+
+<!-- Asegúrate de tener Font Awesome para los íconos -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+
 
 {% endblock %}
