--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -12,11 +12,11 @@
         <h2>Iniciar Sesión</h2>
         <form action="/iniciar" method="post">
             {% csrf_token %}
-            <label for="username">Usuario:</label>
-            <input type="text" placeholder="Ingrese su usuario" id="usuario" name="usuario" required>
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required>
             <label for="password">Contraseña:</label>
             <div class="password-container">
-                <input type="password" id="clave" name="clave" required>
+                <input type="password" id="password" name="password" required>
                 <i id="togglePassword" class="fa fa-eye" onclick="togglePassword()"></i>
             </div>
             <input type="submit" value="Iniciar Sesión">
@@ -35,7 +35,7 @@
 
 <script type="text/javascript">
     function togglePassword() {
-        var passwordField = document.getElementById('clave');
+        var passwordField = document.getElementById('password');
         var passwordType = passwordField.type;
         var toggleIcon = document.getElementById('togglePassword');
 
