--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -12,8 +12,8 @@
         <h2>Iniciar Sesión</h2>
         <form action="/iniciar" method="post">
             {% csrf_token %}
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="username">Nombre de Usuario:</label>
+            <input type="text" id="username" name="username" required>
             <label for="password">Contraseña:</label>
             <div class="password-container">
                 <input type="password" id="password" name="password" required>
