--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -13,10 +13,10 @@
         <form action="/iniciar" method="post">
             {% csrf_token %}
             <label for="username">Nombre de Usuario:</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" placeholder="Ingrese su usuario" id="username" name="username" required>
             <label for="password">Contraseña:</label>
             <div class="password-container">
-                <input type="password" id="password" name="password" required>
+                <input type="password" placeholder="Ingrese su contraseña" id="password" name="password" required>
                 <i id="togglePassword" class="fa fa-eye" onclick="togglePassword()"></i>
             </div>
             <input type="submit" value="Iniciar Sesión">
