--- a/comida/templates/regis.html
+++ b/comida/templates/regis.html
@@ -13,15 +13,14 @@
         <form action="/regis" method="post">
             {% csrf_token %}
             <label for="username">Usuario:</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" placeholder="Ingrese un usuario" id="username" name="username" required>
             <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" placeholder="Ingrese su email" id="email" name="email" required>
             <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" placeholder="Ingrese su contraseña" id="password" name="password" required>
             <input type="submit" value="Registrarse">
         </form>
-
-        
+        <p clas >¿ya tienes cuenta? <a href="{% url 'iniciar' %}">iniciar sesion aquí</a></p>
     </div>
 </div>
 {% if error %}
