--- a/comida/templates/pagina.html
+++ b/comida/templates/pagina.html
@@ -1,1 +1,8 @@
+{% extends 'base.html' %}
+{% load static %}
+{% block title %} inicio sesión {% endblock %}
+
+{% block content %}
+
 hola
+{% endblock %}
