--- a/comida/templates/pagina.html
+++ b/comida/templates/pagina.html
@@ -3,6 +3,7 @@
 {% block title %} inicio sesión {% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'pagina.css' %}">
 
-hola
+<h1>hola mundo</h1>
 {% endblock %}
