--- a/comida/static/barra.css
+++ b/comida/static/barra.css
@@ -16,6 +16,16 @@
     --negro-carbon: #121212;
     --gris-acero: #95A5A6;
 }
+body{
+    margin: 0;
+    padding: 0;
+    background-color: #333D41;
+    color: white;
+    position: relative;
+    padding-bottom: 6rem;
+    min-height: 100vh;
+
+}
 .header{
     position: fixed;
     background-color: var(--negro-carbon);
@@ -28,9 +38,19 @@
     z-index: 100;
     top: 0; 
 }
+.main{
+    margin-top: 90px;
+}
 .logo {
     display: flex;
     align-items: center;
+    font-size: 25px;
+}
+
+.logo a h2{
+    text-decoration: none;
+    color: var(--dorado);
+    font-size: 25px;
 
 }
 
@@ -88,14 +108,83 @@
     font-size: 2.5rem;
    
 }
+
+
+.menu-icons {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.menu-icons a {
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.menu-icons a:hover {
+    color: var(--dorado);
+}
+
+.profile-menu {
+    position: relative;
+    display: inline-block;
+}
+
+.profile-menu {
+    position: relative;
+    display: inline-block;
+}
+
+.profile-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    color: white;
+}
+
+.profile-dropdown {
+    width: 100px;
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #222;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+}
+
+.profile-dropdown a {
+    font-size: 10px;
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    transition: background 0.3s;
+}
+
+.profile-dropdown a:hover {
+    background-color: rgb(0, 0, 0);
+}
+
+.profile-dropdown.active {
+    display: block;
+}
+
 .footer p{
-    font-size: 1.3em;
+    font-size: 15px;
 }
 
 .footer {
     background-color: var(--negro-carbon);
     padding: 10px;
     color: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 .footer p:hover{
     color: var(--dorado);
