--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="{% static 'login.css' %}">
 
-<div class="main">
+<div class="loginn">
     <div class="login-cont">
         <h2>Iniciar Sesión</h2>
         <form action="/iniciar" method="post">
