--- a/comida/templates/regis.html
+++ b/comida/templates/regis.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="{% static 'login.css' %}">
 
-<div class="main">
+<div class="loginn">
     <div class="login-cont">
         <h2>Registrarse</h2>
         <form action="/regis" method="post">
