--- a/comida/templates/home.html
+++ b/comida/templates/home.html
@@ -9,7 +9,7 @@
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <main class="main">
-    <section class="contenido" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600">
+    <section class="contenido" >
         <div class="cont-ini" data-aos="fade-right" data-aos-duration="1750">
             <h2>Chok Dog</h2>
             <div class="descripcion">
@@ -28,13 +28,11 @@
 
     
     
-    <h2 class="menu-titulo" data-aos="fade-down"
- data-aos-easing="linear"
- data-aos-duration="600">Platos de comida</h2>
+    <h2 class="menu-titulo" >Platos de comida</h2>
         
    
 
-    <section class="menu-section" id="menu" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+    <section class="menu-section" id="menu">
     
         <div class="menu-ima">
             <div class="menu-imagenes" data-aos="flip-left" data-aos-duration="2300">
