--- a/comida/static/barra.css
+++ b/comida/static/barra.css
@@ -19,8 +19,6 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #333D41;
-    color: white;
     position: relative;
     padding-bottom: 6rem;
     min-height: 90vh;
@@ -39,7 +37,8 @@ body{
     top: 0; 
 }
 .main{
-    margin-top: 80px;
+    margin: 80px 0 0 10px;
+
 }
 .logo {
     display: flex;
