--- a/comida/static/pagina.css
+++ b/comida/static/pagina.css
@@ -1,1 +1,105 @@
 @import url('/static/barra.css ');
+
+
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5rem 10%;
+    background-color: var(--gris-industrial);
+    position: relative;
+}
+
+.hero-content h1 {
+    font-size: 3rem;
+    color: var(--blanco);
+}
+
+.resaltado {
+    color: var(--dorado);
+}
+
+.hero-content p {
+    font-size: 1.2rem;
+    margin: 1rem 0;
+}
+
+.hero-buttons {
+    display: flex;
+    gap: 1rem;
+}
+
+.btn {
+    text-decoration: none;
+    background-color: var(--dorado);
+    color: var(--negro-carbon);
+    padding: 0.8rem 1.5rem;
+    border-radius: 8px;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.btn-secundario {
+    background-color: var(--gris-acero);
+    color: var(--negro-carbon);
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+.hero-img img {
+    margin-top: 5px;
+    width: 500px;
+    height: 500px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+}
+
+/* Sección de Menú */
+.menu-of{
+    text-align: center;
+    padding: 4rem 10%;
+    background-color: var(--negro-carbon);
+}
+
+.menu-of h2 {
+    font-size: 2.5rem;
+    color: var(--dorado);
+    margin-bottom: 2rem;
+}
+
+.menu-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+}
+
+.menu-item {
+    background-color: var(--gris-industrial);
+    padding: 1.5rem;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+}
+
+.menu-item:hover {
+    transform: scale(1.05);
+}
+
+.menu-item img {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.menu-item h3 {
+    color: var(--dorado);
+    margin-top: 1rem;
+}
+
+.menu-item p {
+    color: var(--blanco);
+    font-size: 1rem;
+}
