--- a/comida/static/style.css
+++ b/comida/static/style.css
@@ -85,6 +85,7 @@
     font-weight: 700;
     transition: .3s all;
     background-color: #00000059;
+    color: #D9D9D9;
 }
 
 .boton:hover{
@@ -93,10 +94,7 @@
     
 }
 
-.boton a{
-    text-decoration: none;
-    color: #D9D9D9;
-}
+
 
 
 
@@ -118,17 +116,27 @@
     width: 100%;
     padding: 30px;
     text-align: center;
-    background-color: var(--gris-industrial);
+    background-color: #000000b6;
     z-index: 1;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .menu-titulo {
-    font-size: 3.2em;
-    margin: 2rem;
-    color: #FFD700;
-    -webkit-text-stroke: .1px black;
+    font-size: 4rem;
+    
+    color: #ffffff;
     z-index: 1;
+    background-color: #000000b6;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .menu-titulo hr{
@@ -145,6 +153,7 @@
     max-width: 1200px;
     margin: 0 auto;
 }
+
 
 .menu-imagenes {
     position: relative;
