--- a/comida/templates/perfil.html
+++ b/comida/templates/perfil.html
@@ -5,30 +5,32 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'perfil.css' %}">
- 
-<div class="profile-container">
-    <h2>Perfil de {{ user.username }}</h2>
+ <div class="profile">
+    <div class="profile-container">
+        <h2>Perfil de {{ user.username }}</h2>
     
-    <div class="profile-picture">
-        <img src="{{ user.profile_picture.url }}" alt="Foto de perfil">
+        <form method="POST">
+            {% csrf_token %}
+    
+            <label>Nombre:</label>
+            <input type="text" name="first_name" value="{{ user.first_name }}" required>
+    
+            <label>Apellido:</label>
+            <input type="text" name="last_name" value="{{ user.last_name }}" required>
+    
+            <label>Nombre de usuario:</label>
+            <input type="text" name="username" value="{{ user.username }}" required>
+    
+            <label>Correo electrónico:</label>
+            <input type="email" name="email" value="{{ user.email }}" required>
+    
+            <label>Teléfono:</label>
+            <input type="text" name="phone" value="{{ user.phone }}" required>
+    
+            <label>Dirección:</label>
+            <input type="address" name="address" value="{{ user.address}}" required>
+
+        </form>
     </div>
-
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        
-        <label>Nombre de usuario:</label>
-        <input type="text" name="username" value="{{ user.username }}" required>
-
-        <label>Correo electrónico:</label>
-        <input type="email" name="email" value="{{ user.email }}" required>
-
-        <label>Biografía:</label>
-        <textarea name="bio">{{ user.bio }}</textarea>
-
-        <label>Foto de perfil:</label>
-        <input type="file" name="profile_picture">
-
-        <button type="submit">Actualizar Perfil</button>
-    </form>
 </div>
 {% endblock %}
