--- a/comida/templates/regis.html
+++ b/comida/templates/regis.html
@@ -12,15 +12,37 @@
         <h2>Registrarse</h2>
         <form action="/regis" method="post">
             {% csrf_token %}
+
+            <div class="name-container">
+                <div>
+                    <label for="first_name">Nombre:</label>
+                    <input type="text" id="first_name" name="first_name" required>
+                </div>
+                <div>
+                    <label for="last_name">Apellido:</label>
+                    <input type="text" id="last_name" name="last_name" required>
+                </div>
+            </div>
+
             <label for="username">Usuario:</label>
-            <input type="text" placeholder="Ingrese un usuario" id="username" name="username" required>
+            <input type="text" id="username" name="username" required>
+
             <label for="email">Correo Electrónico:</label>
-            <input type="email" placeholder="Ingrese su email" id="email" name="email" required>
+            <input type="email" id="email" name="email" required>
+
+            <label for="phone">Teléfono (opcional):</label>
+            <input type="text" id="phone" name="phone">
+
+            <label for="address">Dirección (opcional):</label>
+            <input type="text" name="address">
+
             <label for="password">Contraseña:</label>
-            <input type="password" placeholder="Ingrese su contraseña" id="password" name="password" required>
+            <input type="password" id="password" name="password" required>
+
             <input type="submit" value="Registrarse">
         </form>
-        <p clas >¿ya tienes cuenta? <a href="{% url 'iniciar' %}">iniciar sesion aquí</a></p>
+
+        <p>¿Ya tienes cuenta? <a href="{% url 'iniciar' %}">Iniciar sesión aquí</a></p>
     </div>
 </div>
 {% if error %}
