--- a/comida/templates/home.html
+++ b/comida/templates/home.html
@@ -22,53 +22,9 @@
             </div>
         </div>
         <div class="imagen" data-aos="fade-left" data-aos-duration="1750">
-             <img src="{% static 'img/ima.jpg' %}" alt="" class="imagen-1">
+             <img src="{% static 'img/cok_2.jpg' %}" alt="" class="imagen-1">
         </div>
     </section>
-
-    
-    
-    <h2 class="menu-titulo" >Platos de comida</h2>
-        
-   
-
-    <section class="menu-section" id="menu">
-    
-        <div class="menu-ima">
-            <div class="menu-imagenes" data-aos="flip-left" data-aos-duration="2300">
-                <img src="{% static 'img/c_2.jpg' %}" alt="Platos ">
-            </div>
-            <div class="menu-imagenes" data-aos="flip-left" data-aos-duration="2300">
-                <img src="{% static 'img/c_1.jpg' %}" alt="Platos ">
-            </div>
-            <div class="menu-imagenes" data-aos="flip-left" data-aos-duration="2300">
-                <img src="{% static 'img/c_3.jpg' %}" alt="Platos ">
-            </div>
-            <div class="menu-imagenes" data-aos="flip-left" data-aos-duration="2300">
-                <img src="{% static 'img/c_4.jpg' %}" alt="Platos ">
-            </div>
-            <div class="menu-imagenes" data-aos="flip-left" data-aos-duration="2300">
-                <img src="{% static 'img/c_5.jpg' %}" alt="Platos ">
-            </div>
-            <div class="menu-imagenes" data-aos="flip-left" data-aos-duration="2300">
-                <img src="{% static 'img/c_6.jpg' %}" alt="Platos ">
-            </div>
-            <div class="menu-imagenes" data-aos="flip-left" data-aos-duration="2300">
-                <img src="{% static 'img/c_7.jpg' %}" alt="Platos ">
-            </div>
-            <div class="menu-imagenes" data-aos="flip-left" data-aos-duration="2300">
-                <img src="{% static 'img/c_8.jpg' %}" alt="Platos ">
-            </div>
-        </div>
-        
-    </section>
-
-    
-    <div class="text" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600">
-        <h3 >¿Tienes hambre?</h3>
-        <p>No te quedes con las ganasy ven a visitar nuestro restaurante, nuestra atencion sera la mejor</p>
-    </div>
-    
 </main>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
