--- a/comida/templates/perfil.html
+++ b/comida/templates/perfil.html
@@ -11,24 +11,25 @@
     
         <form method="POST">
             {% csrf_token %}
-    
-            <label>Nombre:</label>
-            <input type="text" name="first_name" value="{{ user.first_name }}" required>
-    
-            <label>Apellido:</label>
-            <input type="text" name="last_name" value="{{ user.last_name }}" required>
-    
-            <label>Nombre de usuario:</label>
-            <input type="text" name="username" value="{{ user.username }}" required>
-    
-            <label>Correo electrónico:</label>
-            <input type="email" name="email" value="{{ user.email }}" required>
-    
-            <label>Teléfono:</label>
-            <input type="text" name="phone" value="{{ user.phone }}" required>
-    
-            <label>Dirección:</label>
-            <input type="address" name="address" value="{{ user.address}}" required>
+            <div class="input">
+                <label>Nombre:</label>
+                <input type="text" name="first_name" value="{{ user.first_name }}  {{ user.last_name }}" required>
+            </div>
+            <div class="input">
+                <label>Nombre de usuario:</label>
+                <input type="text" name="username" value="{{ user.username }}" required>
+            </div>
+            <div class="input">
+                <label>Correo electrónico:</label>
+                <input type="email" name="email" value="{{ user.email }}" required>
+            </div>
+            <div class="input">
+                <label>Teléfono:</label>
+                <input type="text" name="phone" value="{{ user.phone }}" required>
+            </div>
+            <div class="input">                <label>Dirección:</label>
+                <input type="address" name="address" value="{{ user.address}}" required>
+            </div>
 
         </form>
     </div>
