--- a/comida/static/contactenos.css
+++ b/comida/static/contactenos.css
@@ -1,7 +1,7 @@
 @import url('/static/barra.css ');
 
 .contact-section {
-    padding: 4.5rem  2rem 1rem;
+    padding: 1rem  2rem 4rem 2rem;
     background-color: var(--gris-acero);
 }
 
