--- a/comida/static/perfil.css
+++ b/comida/static/perfil.css
@@ -1,5 +1,34 @@
 @import url('/static/barra.css ');
 
+.profile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-container {
+    max-width: 600px;
+    margin: 50px 0 50px 0;
+    background: #333D41;
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+   
+}
+.input {
+    padding: 10px;
+    margin-top: 5px;
+}
+input label{
+    margin: 10px;
+}
+.input input{
+    border-radius: 5px;
+    border: none;
+    background-color: #333D41;
+    color: rgb(255, 255, 255);
+    margin-left: 10px;
+}
 .name-container {
     display: flex;
     gap: 10px;
@@ -9,41 +38,5 @@
     flex: 1;
 }
 
-input {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    border-radius: 5px;
-    border: none;
-    background: #95A5A6;
-    color: black;
-}
 
-.profile{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.profile-container {
-    max-width: 600px;
-    margin: 50px 0 50px 0;
-    background: #333D41;
-    padding: 20px;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-   
-}
-
-
-
-input, textarea {
-    width: 100%;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 5px;
-    border: none;
-    background: #95A5A6;
-    color: black;
-}
 
