--- a/comida/static/style.css
+++ b/comida/static/style.css
@@ -9,13 +9,14 @@
     font-family: "Kotta One", serif;
 }
 
+
 .main {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
+    margin-top: 50px;
 }
 
 .main::before{
@@ -29,6 +30,7 @@
     left: 0;
     bottom: 0;
     right: 0;
+    background-color: #000000b6;
 }
 
 .contenido{
@@ -95,12 +97,10 @@
 }
 
 
-
-
-
 .imagen{
     width: 650px;
     height: 450px;
+    margin: 20px;
     
 }
 
@@ -112,82 +112,4 @@
 }
 
 
-.menu-section {
-    width: 100%;
-    padding: 30px;
-    text-align: center;
-    background-color: #000000b6;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
 
-.menu-titulo {
-    font-size: 4rem;
-    
-    color: #ffffff;
-    z-index: 1;
-    background-color: #000000b6;
-    width: 100%;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-}
-
-.menu-titulo hr{
-    width: 25%;
-    position: relative;
-    left: 37%;
-    
-}
-
-.menu-ima {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-
-.menu-imagenes {
-    position: relative;
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0px 20px 20px 0px #000000;
-    height: 200px;
-   
-}
-
-.menu-imagenes img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    transition: transform 0.3s ease;
-}
-
-.menu-imagenes img:hover {
-    transform: scale(1.1);
-}
-
-.text {
-    text-align: center;
-    margin: 3rem;
-    color: var(--text_2);
-    font-size: 30px;
-    z-index: 1;
-}
-
-.text h3{
-    font-size: 2.5rem;
-    -webkit-text-stroke: .1px black;
-}
-
-.text p{
-    -webkit-text-stroke: .8px black;
-}
