--- a/comida/static/style.css
+++ b/comida/static/style.css
@@ -21,7 +21,7 @@
 
 .main::before{
     content: '';
-    background-image: url('/static/img/ima.jpg');
+    background-image: url('/static/img/cok_4.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
