--- a/comida/static/barra.css
+++ b/comida/static/barra.css
@@ -5,23 +5,26 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Kotta One", serif;
+    box-sizing: border-box;
 }
 :root{
     --text_4: rgba(0, 0, 0, 0.3);
     --text_sha: 5px 20px 5px #000000;
     --blanco: #FFFFFF;
-    --negro-profundo: #1A1A1A;
+    --negro-profundo: #1a1a1a;
+    --fondo: #0000007b;
     --dorado: #D4AF37;
     --gris-industrial: #333D41;
     --negro-carbon: #121212;
     --gris-acero: #95A5A6;
 }
 body{
+
     margin: 0;
     padding: 0;
     position: relative;
-    padding-bottom: 6rem;
     min-height: 90vh;
+    line-height: 1.5;
 
 }
 .header{
@@ -37,7 +40,7 @@ body{
     top: 0; 
 }
 .main{
-    margin: 80px 0 30px 0;
+    margin: 50px 0 0 0;
 
 }
 .logo {
@@ -160,50 +163,98 @@ body{
     display: block;
 }
 
-.footer p{
-    font-size: 15px;
+.footer-cont{
+	max-width: 1170px;
+	margin:auto;
+    
 }
-
-.footer {
-    background-color: var(--negro-carbon);
-    padding: 10px;
-    color: white;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+.row{
+	display: flex;
+	flex-wrap: wrap;
 }
-.footer p:hover{
-    color: var(--dorado);
+ul{
+	list-style: none;
 }
-
-.footer-info {
-    padding: 10px;
+.footer{
+	background-color: var(--negro-carbon);
+    padding: 20px 0;
+    box-shadow: 3px 5px 10px;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -15px;
+	background-color: var(--dorado);
+	height: 2px;
+	box-sizing: border-box;
+	width: 140px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: var(--gris-acero);
+	text-decoration: none;
+	font-weight: 300;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: var(--dorado);
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-flex; 
+    justify-content: center; 
+    align-items: center;  
+    height: 50px; 
+    width: 50px; 
+    background-color: rgb(255, 255, 255);
+    margin: 0 10px 10px 0;
     text-align: center;
-    font-size: 15px;
+    overflow: hidden;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5s ease;
 }
 
-
-.footer-contact {
-    display: flex;
-    justify-content: space-around;
-}
-.redes {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+.footer-col .social-links a i{
     font-size: 30px;
-    text-decoration: none;
-    justify-content: center;
-    align-items: center;
+    
+}
+.footer-col .social-links a:hover{
+	color: var(--dorado);
+	background-color: var(--dorado);
+}
+.footer-col .social-links .fa i{
+    color: #0046de;
+}
+.footer-col .social-links .ig i{
+    background: linear-gradient(to right, #833AB4, #FD1D1D, #FDCB82);
+    border-radius: 10px;
+}
+.footer-col .social-links .wp i{
+    color: #25D366;
+    font-size: 40px;
+    
+}
 
-}
-.redes a{
-	color: white;
-    padding: 5px;
-}
-.redes a:hover{
-    color: var(--dorado);
-}
+
 
 @media (max-width: 768px) {
     .header{
@@ -216,40 +267,17 @@ body{
         margin-top: 10px;
         font-size: 15px;
     }
-    .redes{
-        margin-top: 10px;
-        font-size: 20px;
-    }
-    
-    .redes img{
-        width: 20px;
-        height: 20px;
-    }
-
-    .footer-content {
-        flex-direction: column;
-        gap: 2rem;
-        text-align: center;
-    }
-
-    .footer-contact {
-        text-align: center;
+    .footer-col{
+        width: 50%;
+        margin-bottom: 30px;
     }
     .main{
-        margin-top: 150px;
-    
+        margin-top: 110px;
     }
 }
 
 @media (max-width: 568px) {
-    
-    
-    .footer-contact {
-        flex-wrap: wrap;
-        
-    }
-
-    .footer-info{
-        margin: 10px;
+    .footer-col{
+        width: 50%;
     }
 }
