--- a/comida/static/pagina.css
+++ b/comida/static/pagina.css
@@ -1,6 +1,3 @@
-@import url('/static/barra.css ');
-
-
 .hero {
     display: flex;
     align-items: center;
@@ -57,11 +54,11 @@
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
 }
 
-/* Sección de Menú */
+
 .menu-of{
     text-align: center;
     padding: 4rem 10%;
-    background-color: var(--negro-carbon);
+    background-color: var(--negro-profundo);
 }
 
 .menu-of h2 {
