--- a/comida/static/servicios.css
+++ b/comida/static/servicios.css
@@ -1,7 +1,5 @@
-@import url('/static/barra.css ');
-
 .services-section {
-    background-color: #1a1a1a;
+    background-color: var(--negro-profundo);
     color: #fff;
     padding: 4rem 2rem;
 }
