--- a/comida/templates/home.html
+++ b/comida/templates/home.html
@@ -5,7 +5,7 @@
 
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'style.css' %}">
+<link rel="stylesheet" href="{% static 'home.css' %}">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <main class="main">
