--- a/comida/templates/home.html
+++ b/comida/templates/home.html
@@ -13,7 +13,8 @@
         <div class="cont-ini" data-aos="fade-right" data-aos-duration="1750">
             <h2>Chok Dog</h2>
             <div class="descripcion">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae vel fugit obcaecati facere tenetur earum quaerat voluptate saepe soluta itaque ex optio ipsam doloremque sunt, error, dicta molestiae repellendus quibusdam?</p>
+                <p>¡Te invitamos a vivir una experiecia única en Chok Dog! <br>
+                Es el lugar ideal para disfrutar, es un ambiente acogedor y amigable, perfecto para pasar un buen rato con amigos y familiares, ven prueba nuestras comidas y comparte tu experiencia con nosotros.</p>
             </div>
             <div class="botones">
                 <button class="boton" onclick=location.href="{% url 'iniciar' %}">Iniciar Sesión</button>
