--- a/comida/templates/nosotros.html
+++ b/comida/templates/nosotros.html
@@ -32,7 +32,7 @@
             <div class="about-item">
                 <div class="about-content">
                     <h2 class="about-title">Nuestra Visión</h2>
-                    <p class="about-description">Ser el restaurante líder en comidas rápidas, bebidas y raspados en El Pital, Huila, reconocido por ofrecer experiencias únicas a nuestros clientes a través de sabores innovadores, calidad excepcional y un servicio cálido, contribuyendo al desarrollo gastronómico y turístico de nuestra región.</p>
+                    <p class="about-description">Ser el restaurante líder en comidas rápidas, bebidas y raspados en El Municipio del Pital, Huila, reconocido por ofrecer experiencias únicas a nuestros clientes a través de sabores innovadores, calidad excepcional y un servicio cálido, contribuyendo al desarrollo gastronómico y turístico de nuestra región.</p>
                 </div>
                 <div class="about-overlay">
                     <img src="{% static 'img/cok.jpg' %}" alt="Historia del restaurante" class="about-image">
@@ -44,7 +44,8 @@
             <div class="about-item">
                 <div class="about-content">
                     <h2 class="about-title">Nuestro Local</h2>
-                    <p class="about-description">Un espacio acogedor y elegante diseñado para crear la atmósfera perfecta para disfrutar de una experiencia gastronómica única.</p>
+                    <p class="about-description">
+                        En Chok Dog hemos diseñado nuestro local para que sea un lugar para disfrutar más allá de solo comer; Un ambiente donde cada detalle ha sido pensado para ofrecer Un espacio acogedor, elegante, para crear la atmósfera perfecta y disfrutar de una experiencia gastronómica única.<p>
                 </div>
                 <div class="about-overlay">
                     <img src="{% static 'img/cok_3.jpg' %}" alt="Nuestro local" class="about-image">
@@ -57,14 +58,14 @@
                 </div>
                 <div class="about-content">
                     <h2 class="about-title">Equipo de Trabajo</h2>
-                    <p class="about-description">Un equipo apasionado y profesional dedicado a crear experiencias memorables para nuestros clientes en cada visita.</p>
+                    <p class="about-description">Detrás de cada plato en Chok Dog hay un equipo comprometido con la excelencia, apasionado y profesional dedicado a crear experiencias memorables para nuestros clientes en cada visita.</p>
                 </div>
             </div>
 
             <div class="about-item">
                 <div class="about-content">
-                    <h2 class="about-title">Puerta está abierta</h2>
-                    <p class="about-description">Te invitamos a ser parte de nuestra historia y disfrutar de una experiencia culinaria excepcional en un ambiente acogedor.</p>
+                    <h2 class="about-title">Nuestra Puerta está abierta</h2>
+                    <p class="about-description">Te invitamos a ser parte de nuestra historia y disfrutar de una experiencia gastronomica excepcional, nos ubicamos en la calle 6 #9-10 en el Municipio del pital-Huila, te esperamos</p>
                 </div>
                 <div class="about-overlay">
                     <img src="{% static 'img/cok_3.jpg' %}" alt="Nuestra puerta" class="about-image">
