--- a/comida/static/barra.css
+++ b/comida/static/barra.css
@@ -19,11 +19,11 @@
     --gris-acero: #95A5A6;
 }
 body{
-
     margin: 0;
     padding: 0;
     position: relative;
     min-height: 90vh;
+    padding-bottom: 200px;
     line-height: 1.5;
 
 }
@@ -40,8 +40,7 @@ body{
     top: 0; 
 }
 .main{
-    margin: 50px 0 0 0;
-
+    margin: 80px 0 0 0;
 }
 .logo {
     display: flex;
@@ -179,6 +178,9 @@ ul{
 	background-color: var(--negro-carbon);
     padding: 20px 0;
     box-shadow: 3px 5px 10px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 .footer-col{
    width: 25%;
@@ -261,7 +263,9 @@ ul{
         display: flex;
         flex-direction: column;
     }
-    
+    body{
+        padding-bottom: 390px;
+    }
     .menu a{
         display: flex;
         margin-top: 10px;
@@ -272,7 +276,7 @@ ul{
         margin-bottom: 30px;
     }
     .main{
-        margin-top: 110px;
+        margin-top: 110px; 
     }
 }
 
